cka/lab-9/nginx-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-one
  labels:
    system: secondary
  namespace: accounting
spec:
  selector:
    matchLabels:
      system: secondary
  replicas: 2
  template:
    metadata:
      labels:
        system: secondary
    spec:
      containers:
        - image: nginx:1.20.1
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
      nodeSelector:
        system: secondOne
