cka/lab-9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.external.com
      http:
        paths:
          - backend:
              service:
                name: secondapp
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
